--- a/src/Componentes/UsuarioForm/UsuarioForm.css
+++ b/src/Componentes/UsuarioForm/UsuarioForm.css
@@ -1,9 +1,20 @@
 /* Contenedor principal */
 .form-container {
   max-width: 600px;
-  margin: 2rem auto;
+  margin: 2rem auto; /* Centrado horizontal */
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+  /* Centrado vertical */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  /* Altura y corrección para pantallas pequeñas */
+  min-height: 100vh; /* Ocupa toda la altura de la pantalla */
+  padding: 1rem; /* Espaciado interno */
+  box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
 }
 
 /* Formulario */
@@ -11,12 +22,14 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%; /* Asegura que el formulario tome todo el ancho del contenedor */
+  max-width: 500px; /* Limita el ancho máximo */
 }
 
 /* Título del formulario */
 .form h2 {
   font-size: 1.8rem;
-  color: #333;
+  color: #c3f0bc;
   text-align: center;
   margin-bottom: 1rem;
 }
@@ -45,7 +58,7 @@
 .form-group label {
   font-size: 1rem;
   font-weight: 500;
-  color: #555;
+  color: #868a84;
 }
 
 /* Campos de entrada */
@@ -86,4 +99,10 @@ button:hover {
 button:disabled {
   background-color: #ccc;
   cursor: not-allowed;
+}
+
+.boton-izquierda{
+  display: flex;
+  align-items: flex-end;
+  max-width: 35%;
 }
