se modificó reservas para que se pueda crear sin un usuario objeto (solo nombre y telefono)

--- a/src/Componentes/AdminBarberos/AdminBarberos.css
+++ b/src/Componentes/AdminBarberos/AdminBarberos.css
@@ -9,9 +9,9 @@
     margin-bottom: 20px;
   }
   
-  .btn-atras, .btn-crear {
+  .btn-crear {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #010407;
     color: white;
     border: none;
     border-radius: 5px;
