--- a/src/Componentes/PerfilUsuario/PerfilUsuario.css
+++ b/src/Componentes/PerfilUsuario/PerfilUsuario.css
@@ -3,12 +3,15 @@
     flex-direction: column;
     align-items: center;
     font-family: Arial, sans-serif;
-    color: rgb(14, 2, 2);
-    background-color: white;
+    color: rgb(253, 253, 253);
+    background-color: rgb(20, 19, 19);
 }
 
 .imagen-container {
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .imagen-perfil {
@@ -31,7 +34,8 @@ input{
     max-width: 400px;
     text-align: left;
     padding: 10px;
-    background-color: white;
+    background: linear-gradient(180deg, #001225, #170012);
+
 }
 
 .datos-usuario p {
@@ -44,7 +48,8 @@ input{
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    padding: 1rem;
+    width: 100vw;  /* Ocupa el 100% del ancho de la pantalla */
+    height: 100vh; /* Ocupa el 100% de la altura de la pantalla */
 }
 
 .imagen-container {
