--- a/src/Componentes/UsuarioForm/UsuarioForm.css
+++ b/src/Componentes/UsuarioForm/UsuarioForm.css
@@ -106,3 +106,39 @@ button:disabled {
   align-items: flex-end;
   max-width: 35%;
 }
+
+.volver-button {
+  background-color: transparent; /* Fondo oscuro con algo de transparencia */
+  color: #fff; /* Texto blanco */
+  border: 2px solid #b20634; /* Borde dorado */
+  border-radius:100px; /* Borde redondeado */
+  font-size: 18px; /* Fuente más grande */
+  font-weight: bold; /* Texto en negrita */
+  cursor: pointer;
+  max-width: 70px;
+  transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+}
+
+.volver-button:hover {
+  background-color: #6a020e; /* Fondo dorado al pasar el mouse */
+  color: #f9f9f8; /* Texto oscuro */
+  transform: scale(1.05); /* Efecto de agrandar el botón */
+  box-shadow: 0 4px 10px rgba(255, 111, 97, 0.5); /* Sombra suave */
+}
+
+.volver-button:focus {
+  outline: none; /* Elimina el borde de enfoque */
+}
+
+.volver-button:active {
+  background-color: #fd7e14; /* Fondo naranja al presionar */
+  transform: scale(0.95); /* Efecto de presionar */
+}
+
+/* Estilos específicos para pantallas pequeñas */
+@media (max-width: 168px) {
+  .volver-button {
+    padding: 10px 20px; /* Ajustar el tamaño del botón en pantallas pequeñas */
+    font-size: 16px;
+  }
+}
